# atmo3

./: .gitignore  README.md  era_5_profiles.py  meson.build  pyproject.toml  q_fluct_profiles.py
atmo3/: __init__.py  atm_utils.py  atmosphere.py  box.py  calibration.py  constants.py  continuum_emission.py  cube.py  emission.py  emission_utils.py  grid_utils.py  ice_emission.py  lines_emission.py  obs_utils.py  observation.py  parallel_rng.py  polarized_emission.py  power.py  super_grid.py
atmo3/data/: h2o_lines_1750GHz.npz  mt_ckd_continuum.npz  o2_coupled_lines_1750GHz.npz  o2_uncoupled_lines_1750GHz.npz  (+2 more)
examples/: 3d-plot.ipynb  README.txt  atmo_box_test.ipynb  atmo_box_test.py  check_emission.ipynb  data_visualization.py  delta_q_profiles_2023_07.npz  delta_q_profiles_2023_07_bk.npz  era5_profiles_2023_07_06-1500.npz  era5_profiles_2023_09_16-0000.npz  grid_visualization.ipynb  line_of_sight_integration_pwv.ipynb  line_of_sight_visualization.ipynb  los_integral_pwv_with_interpolation.ipynb  mean_q_profiles_2023_07.npz  mean_ta_profiles_2023_07.npz  mean_ta_profiles_2023_07_bk.npz  sample_jobscript.slurm  test_T-p-wv-pwv.py  test_calibration.py  test_cube.py  visualize_calibration.ipynb
notebooks/: RH_independant_clouds_atmo3.ipynb  apex_analysis_data.ipynb  atmo3_ice_emission copy.ipynb  atmo3_ice_emission.ipynb  cloud_generation_rh.ipynb  clouds_cc_era5 copy.ipynb  clouds_cc_era5.ipynb  cube_pertubationPWV_clouds.ipynb  era5_tests.ipynb  era5cubes.ipynb
simulating_specific_attenuation_pycraf/: itu_constants.py  testing_code_gemini.ipynb
(+397 files in other folders)
