[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'atmo3'
version = '0.0.1.b0'
description = 'Atmo(sphere) cube - a simulation cube for atmospheric emissions in the microwave'
readme = 'README.md'
requires-python = '>=3.12'
dependencies = [
    "numpy",
    "xarray",
    "jax",
]
license = {file = 'LICENSE'}
authors = [
  {name = 'Shamik Ghosh', email = 'shamik@lbl.gov'},
  {name = 'Jacques Delabrouille', email = 'jdelabrouille@lbl.gov'},
  {name = 'Julien Tang', email = 'JulienTang@lbl.gov'},
  {name = 'Timothée Tollet', email = 'tollet@apc.in2p3.fr'},
]